--- a/index.css
+++ b/index.css
@@ -22,7 +22,8 @@
   padding: 5px;
   margin: 5px;
   width: 200px;
-  height: 370px;
+  height: 500px;
+
   background-color: rgb(234, 235, 232);
 }
 .card:hover {
@@ -38,4 +39,7 @@
 .res-container {
   display: flex;
   flex-wrap: wrap;
+}
+.cuisines {
+  font-size: smaller;
 }
